cmake_minimum_required(VERSION 3.24)
project(LearningC C)

set(CMAKE_C_STANDARD 11)

add_executable(LearningC pyramid.c)
add_executable(addition 4.1.c)
add_executable(arrayaddition arrayaddition.c)
add_executable(avg-3.2 4.2.c)
add_executable(randomnumgen randomnumgen.c)
add_executable(3.3 4.3.c)
add_executable(3.4 4.4.c)
add_executable(3.5 4.5.c)
add_executable(3.6 4.6.c)
add_executable(2.1 2.1.c)