cmake_minimum_required(VERSION 3.24)
project(LearningC C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(LearningC pyramid.c)
add_executable(addition addition-3.1.c)
add_executable(arrayaddition arrayaddition.c)
add_executable(avg-3.2 avg-3.2.c)
add_executable(randomnumgen randomnumgen.c)
add_executable(3.3 3.3.c)
add_executable(3.4 3.4.c)
add_executable(3.5 3.5.c)
add_executable(3.6 3.6.c)
add_executable(5.1.c)
add_executable(5.2 5.2.c)
add_executable(5.3.c)
add_executable(5.4.c)
add_executable(5.5.c)
add_executable(5.6.c)
add_executable(5.7.c)